--- a/app/src/main/res/drawable/ic_clear_all_24dp.xml
+++ b/app/src/main/res/drawable/ic_clear_all_24dp.xml
@@ -3,6 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
+    android:tint="?colorControlNormal"
     >
   <path
       android:fillColor="@android:color/white"
