--- a/app/src/main/res/drawable/ic_grid_24dp.xml
+++ b/app/src/main/res/drawable/ic_grid_24dp.xml
@@ -1,6 +1,5 @@
 <vector android:height="24dp" android:tint="?colorControlNormal"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/black"
-        android:fillType="evenOdd" android:pathData="M3,3v8h8L11,3L3,3zM9,9L5,9L5,5h4v4zM3,13v8h8v-8L3,13zM9,19L5,19v-4h4v4zM13,3v8h8L21,3h-8zM19,9h-4L15,5h4v4zM13,13v8h8v-8h-8zM19,19h-4v-4h4v4z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M20,9L20,9c0,-0.55 -0.45,-1 -1,-1h-3V5c0,-0.55 -0.45,-1 -1,-1h0c-0.55,0 -1,0.45 -1,1v3h-4V5c0,-0.55 -0.45,-1 -1,-1h0C8.45,4 8,4.45 8,5v3H5C4.45,8 4,8.45 4,9v0c0,0.55 0.45,1 1,1h3v4H5c-0.55,0 -1,0.45 -1,1v0c0,0.55 0.45,1 1,1h3v3c0,0.55 0.45,1 1,1h0c0.55,0 1,-0.45 1,-1v-3h4v3c0,0.55 0.45,1 1,1h0c0.55,0 1,-0.45 1,-1v-3h3c0.55,0 1,-0.45 1,-1v0c0,-0.55 -0.45,-1 -1,-1h-3v-4h3C19.55,10 20,9.55 20,9zM14,14h-4v-4h4V14z"/>
 </vector>
