--- a/app/src/main/res/drawable/ic_playlist_add_24dp.xml
+++ b/app/src/main/res/drawable/ic_playlist_add_24dp.xml
@@ -1,7 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp" android:height="24dp" android:tint="?attr/colorControlNormal"
-    android:viewportWidth="24" android:viewportHeight="24">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="?colorControlNormal">
   <path
-      android:fillColor="@color/black"
-      android:pathData="M14,10H3v2h11V10zM14,6H3v2h11V6zM18,14v-4h-2v4h-4v2h4v4h2v-4h4v-2H18zM3,16h7v-2H3V16z"/>
+      android:fillColor="@android:color/white"
+      android:pathData="M13,10L3,10c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h10c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1zM13,6L3,6c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h10c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1zM18,14v-3c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v3h-3c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h3v3c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-3h3c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1h-3zM3,16h6c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L3,14c-0.55,0 -1,0.45 -1,1s0.45,1 1,1z"/>
 </vector>
