--- a/app/src/main/res/layout/bottom_sheet_playlist.xml
+++ b/app/src/main/res/layout/bottom_sheet_playlist.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/shape_playlist_bottom_sheet_background"
     android:id="@+id/bs_playlist"
-    android:padding="10dp"
-    android:background="@drawable/playlist_bs_background"
-    >
+    android:padding="10dp">
+
     <TextView
         android:id="@+id/tv_playlist_name"
         android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_play_circle_outline_24"
+            android:src="@drawable/ic_play_circle_outline_24dp"
             app:tint="@color/black" />
         <TextView
             android:layout_width="wrap_content"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_edit_24"
+            android:src="@drawable/ic_edit_24dp"
             app:tint="@color/black" />
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_delete_24"
+            android:src="@drawable/ic_delete_24dp"
             app:tint="@color/black" />
         <TextView
             android:layout_width="wrap_content"
