--- a/app/src/main/res/layout/bottom_sheet_playlist_details.xml
+++ b/app/src/main/res/layout/bottom_sheet_playlist_details.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bs_playlist_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/playlist_bs_background"
+    android:background="@drawable/shape_playlist_bottom_sheet_background"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_play_circle_outline_24"
+            android:src="@drawable/ic_play_circle_outline_24dp"
             app:tint="@color/black" />
 
         <TextView
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_add_to_queue_24"
+            android:src="@drawable/ic_add_to_queue_24dp"
             app:tint="@color/black" />
 
         <TextView
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_delete_24"
+            android:src="@drawable/ic_delete_24dp"
             app:tint="@color/black" />
 
         <TextView
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_round_info_24"
+            android:src="@drawable/ic_info_24dp"
             app:tint="@color/black" />
 
         <TextView
