--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -42,13 +42,11 @@
                         android:id="@+id/img_thumbnail"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        app:tint="@color/blue1"
                         android:background="@color/white"
 
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_round_playlist_add_24"
-                        />
+                        android:src="@drawable/ic_playlist_add_24dp" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
@@ -94,7 +92,7 @@
 
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_round_watch_later_24"
+                        android:src="@drawable/ic_watch_later_24dp"
                        />
                 </androidx.cardview.widget.CardView>
 
