--- a/app/src/main/res/layout/item_media_queue.xml
+++ b/app/src/main/res/layout/item_media_queue.xml
@@ -80,7 +80,7 @@
 
         android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_round_delete_24"
+        android:src="@drawable/ic_delete_24dp"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
