--- a/app/src/main/res/menu/playlist_options_menu.xml
+++ b/app/src/main/res/menu/playlist_options_menu.xml
@@ -5,7 +5,7 @@
 
     <item android:id="@+id/action_search"
         android:title="@string/search"
-        android:icon="@drawable/ic_baseline_search_24"
+        android:icon="@drawable/ic_search_24dp"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.widget.SearchView"
         android:iconTint="@color/white"
@@ -14,7 +14,7 @@
     <item android:id="@+id/action_sort"
         android:title="@string/sort"
         android:iconTint="@color/white"
-        android:icon="@drawable/ic_round_sort_24"
+        android:icon="@drawable/ic_sort_24dp"
         />
 
 </menu>
