--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -7,7 +7,6 @@
     android:background="@color/colorPlaylist_background"
     android:orientation="vertical"
 
-    android:paddingBottom="60dp"
     tools:context=".ui.playlist.PlaylistFragment">
     <!-- everything you already have -->
 
@@ -36,17 +35,18 @@
 
                     android:layout_marginStart="10dp"
                     app:cardCornerRadius="12dp"
-                    app:cardElevation="2dp">
+                    >
 
                     <ImageView
                         android:id="@+id/img_thumbnail"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:background="@color/white"
+                        android:background="@color/blue1"
 
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_playlist_add_24dp" />
+                        android:src="@drawable/ic_playlist_add_24dp"
+                        app:tint="@color/white" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
@@ -64,7 +64,6 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-
             <LinearLayout
                 android:id="@+id/layoutItem_watchLater"
                 android:layout_width="match_parent"
@@ -77,18 +76,17 @@
                     android:id="@+id/cardView_thumbWatchLater"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-
+                    app:cardBackgroundColor="@color/blue1"
                     app:cardCornerRadius="12dp"
                     android:layout_marginStart="10dp"
-                    app:cardElevation="2dp">
+                    >
 
                     <ImageView
                         android:id="@+id/img_thumbWatchLater"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:background="@color/white"
                         android:layout_gravity="center"
-                        app:tint="@android:color/holo_green_light"
+                        app:tint="@android:color/white"
 
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
