--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -12,8 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:elevation="0dp"
+        app:cardElevation="0dp"
+
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="12dp"
-        app:cardElevation="2dp"
         android:layout_marginStart="10dp"
 
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +27,9 @@
             android:id="@+id/img_thumbnail"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_gravity="center"
             android:contentDescription="@string/image_for_thumbnail"
-
+            app:tint="@color/blue1"
             android:src="@drawable/ic_launcher_background"
             android:scaleType="centerCrop"
             />
