--- a/app/src/main/res/layout/item_video_library_list.xml
+++ b/app/src/main/res/layout/item_video_library_list.xml
@@ -42,7 +42,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:contentDescription="@string/description_play_arrow_icon"
-                android:src="@drawable/ic_play_arrow_24dp" />
+                android:src="@drawable/ic_play_arrow_24dp"
+                app:tint="@color/white" />
         </RelativeLayout>
 
         <LinearLayout
