--- a/app/src/main/res/menu/video_library_options_menu.xml
+++ b/app/src/main/res/menu/video_library_options_menu.xml
@@ -3,24 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/search_menu_item"
+        android:icon="@drawable/ic_search_24dp"
         android:orderInCategory="0"
         android:title="@string/item_search"
-        app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom" />
+
 
     <item
-        android:id="@+id/grid_list_change_menu_item"
-        android:orderInCategory="10"
-        android:title="@string/item_list_grid_change" />
+        android:id="@+id/video_library_change_display_mode"
+        android:title="@string/show_as"
+        app:iconTint="@color/cyan"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/video_library_show_as_list_menu_item"
+                android:icon="@drawable/ic_list_24dp"
+                android:title="@string/list"
+                app:iconTint="@color/cyan" />
+
+            <item
+                android:id="@+id/video_library_show_as_grid_menu_item"
+                android:icon="@drawable/ic_grid_24dp"
+                android:title="@string/grid"
+                app:iconTint="@color/cyan" />
+        </menu>
+    </item>
 
     <item
-        android:id="@+id/sort_by_name_menu_item"
-        android:orderInCategory="30"
-        android:title="@string/item_sort_by_name" />
+        android:id="@+id/video_library_change_sort_mode"
+        android:title="@string/sort_by"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/video_library_sort_by_name_menu_item"
+                android:title="@string/sort_by_name" />
 
-    <item
-        android:id="@+id/sort_by_length_menu_item"
-        android:orderInCategory="20"
-        android:title="@string/item_sort_by_length" />
-
+            <item
+                android:id="@+id/video_library_sort_by_length_menu_item"
+                android:title="@string/sort_by_length" />
+        </menu>
+    </item>
 </menu>
