--- a/app/src/main/res/menu/music_library_options_menu.xml
+++ b/app/src/main/res/menu/music_library_options_menu.xml
@@ -26,4 +26,23 @@
                 app:iconTint="@color/cyan" />
         </menu>
     </item>
+    <item
+        android:id="@+id/change_sort_mode"
+        android:title="Sort"
+        app:iconTint="@color/cyan"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/sort_by_title_ASC"
+                android:title="Sort by title (A-Z)"
+                android:icon="@drawable/ic_list_24dp"
+                app:iconTint="@color/cyan" />
+
+            <item
+                android:id="@+id/sort_by_title_DESC"
+                android:title="Sort by title (Z-A)"
+                android:icon="@drawable/ic_grid_24dp"
+                app:iconTint="@color/cyan" />
+        </menu>
+    </item>
 </menu>
