--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -108,6 +108,50 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+     <!--       <LinearLayout
+                android:id="@+id/layoutItem_addFavourite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView_thumbWatchLater"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    app:cardBackgroundColor="@color/blue1"
+                    app:cardCornerRadius="12dp"
+                    android:layout_marginStart="10dp"
+                    >
+
+                    <ImageView
+                        android:id="@+id/img_thumbWatchLater"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_gravity="center"
+                        app:tint="@android:color/white"
+
+                        android:contentDescription="@string/image_for_thumbnail"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_watch_later_24dp"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_favouriteWatchLater"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="@string/watch_later_list"
+
+                    android:layout_marginStart="20dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/colorPlaylist_textColor"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </LinearLayout>-->
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_playlists"
                 android:layout_width="match_parent"
