--- a/app/src/main/res/layout/fragment_artist_detail.xml
+++ b/app/src/main/res/layout/fragment_artist_detail.xml
@@ -100,6 +100,7 @@
                     android:singleLine="true"
                     android:text="@string/default_artist_details_description"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/artist_details_small_artwork"
                     app:layout_constraintTop_toBottomOf="@+id/artist_details_name" />
