--- a/app/src/main/res/layout/fragment_media_queue.xml
+++ b/app/src/main/res/layout/fragment_media_queue.xml
@@ -95,7 +95,8 @@
 
                 android:layout_gravity="center"
                 android:backgroundTint="@color/white"
-                android:src="@drawable/ic_clear_all_24dp" />
+                android:src="@drawable/ic_clear_all_24dp"
+                app:tint="@color/white" />
 
             <TextView
                 android:id="@+id/tv_clearQueue"
@@ -111,6 +112,19 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/media_queue_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/media_queue_viewpager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_queue"
