--- a/app/src/main/res/layout/item_overview_song_big.xml
+++ b/app/src/main/res/layout/item_overview_song_big.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp"
     android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp">
+    android:layout_marginEnd="5dp"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <LinearLayout
         android:id="@+id/song_click_area_linearlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
@@ -41,10 +41,10 @@
 
 
         <TextView
-            android:layout_marginTop="5dp"
             android:id="@+id/song_name_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:gravity="start"
             android:singleLine="true"
@@ -52,6 +52,7 @@
             android:textColor="#474646"
             android:textSize="15sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/song_artist_textview"
             android:layout_width="match_parent"
