add viewpager mediaqueue

--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:id="@+id/layoutItem_PlaylistDetails"
+    android:background="?attr/selectableItemBackground"
     >
 
     <androidx.cardview.widget.CardView
