--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -65,6 +65,50 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layoutItem_myFavourite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView_thumbnailFavourite"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    app:cardBackgroundColor="@color/blue1"
+                    android:layout_marginStart="10dp"
+                    app:cardCornerRadius="12dp"
+                    >
+                    <ImageView
+                        android:id="@+id/img_thumbnailFavourite"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:background="@color/blue1"
+
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/image_for_thumbnail"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_favorite_24dp"
+                        app:tint="@color/white" />
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_myFavourite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp"
+
+                    android:text="@string/my_favourites"
+
+                    android:textColor="@color/colorPlaylist_textColor"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/layoutItem_watchLater"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
