--- a/app/src/main/res/layout/bottom_sheet_playlist_details.xml
+++ b/app/src/main/res/layout/bottom_sheet_playlist_details.xml
@@ -67,6 +67,32 @@
             android:text="@string/add_to_queue"
             android:textColor="@color/black" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bs_addToFavouritePlaylistDetailsItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:padding="12dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_favorite_24dp"
+            app:tint="@color/black" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="24dp"
+            android:text="@string/add_to_favorite"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/bs_deletePlaylistDetailsItem"
         android:layout_width="match_parent"
