--- a/app/src/main/res/drawable/shape_playlist_details_header_background.xml
+++ b/app/src/main/res/drawable/shape_playlist_details_header_background.xml
@@ -3,8 +3,8 @@
     <gradient
         android:type="linear"
         android:angle="135"
-        android:startColor="@color/blue1"
-        android:endColor="@color/blue2"
+        android:startColor="@color/light_cyan"
+        android:endColor="@color/cyan"
     />
     <corners android:bottomLeftRadius="30dp"
         android:bottomRightRadius="30dp"/>
