--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/app_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
+            android:layout_height="?actionBarSize"
+            android:background="?android:windowBackground"
             android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar" />
     </com.google.android.material.appbar.AppBarLayout>
 
