--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -4,11 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPlaylist_background"
     android:orientation="vertical"
-
     tools:context=".ui.playlist.PlaylistFragment">
-    <!-- everything you already have -->
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -32,17 +29,14 @@
                     android:id="@+id/cardView_thumbnail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_marginStart="10dp"
-                    app:cardCornerRadius="12dp"
-                    >
+                    app:cardCornerRadius="12dp">
 
                     <ImageView
                         android:id="@+id/img_thumbnail"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:background="@color/blue1"
-
+                        android:background="@color/cyan"
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_playlist_add_24dp"
@@ -53,13 +47,9 @@
                     android:id="@+id/tv_playlistName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
-
                     android:text="@string/new_playlist"
-
-                    android:textColor="@color/colorPlaylist_textColor"
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -76,10 +66,9 @@
                     android:id="@+id/cardView_thumbWatchLater"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    app:cardBackgroundColor="@color/blue1"
+                    app:cardBackgroundColor="@color/green"
                     app:cardCornerRadius="12dp"
-                    android:layout_marginStart="10dp"
-                    >
+                    android:layout_marginStart="10dp">
 
                     <ImageView
                         android:id="@+id/img_thumbWatchLater"
@@ -87,23 +76,18 @@
                         android:layout_height="48dp"
                         android:layout_gravity="center"
                         app:tint="@android:color/white"
-
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_watch_later_24dp"
-                       />
+                        android:src="@drawable/ic_watch_later_24dp" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/tv_favouriteWatchLater"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
                     android:text="@string/watch_later_list"
-
                     android:layout_marginStart="20dp"
                     android:layout_gravity="center"
-                    android:textColor="@color/colorPlaylist_textColor"
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
