--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -1,73 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
-    android:id="@+id/layoutItem_PlaylistDetails"
-    >
+    android:id="@+id/layoutItem_PlaylistDetails">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_thumbnailPlaylistDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         app:cardCornerRadius="12dp"
         app:cardElevation="2dp"
         android:layout_marginStart="10dp"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent">
+
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
-
             <ImageView
                 android:id="@+id/img_thumbnailPlaylistDetails"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:contentDescription="@string/image_for_thumbnail"
-
                 android:src="@drawable/ic_launcher_background"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
             <TextView
                 android:id="@+id/tv_durationMedia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:background="@color/black"
-                android:text="1:24"
+                android:text="@string/default_playback_time"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:padding="2dp"
-
-                android:layout_gravity="right|bottom"
-                />
+                android:layout_gravity="end|bottom" />
         </FrameLayout>
 
     </androidx.cardview.widget.CardView>
-
-
     <TextView
         android:id="@+id/tv_playlistNamePlaylistDetails"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="20dp"
         android:text="@string/app_name"
-
-        android:textColor="@color/colorPlaylist_textColor"
         android:textSize="16sp"
         android:textStyle="bold"
-
         android:ellipsize="end"
         android:singleLine="true"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cardView_thumbnailPlaylistDetails"
         app:layout_constraintTop_toTopOf="parent" />
@@ -98,26 +80,23 @@
         android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_play_circle_outline_24dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/imgBtn_playlist_details_more"
         app:tint="@color/black" />
+
     <ImageButton
         android:id="@+id/imgBtn_playlist_details_more"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:contentDescription="@string/add_more"
         android:background="?attr/selectableItemBackground"
-
         android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_more_vert_24dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:tint="@color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
