--- a/app/src/main/res/layout/item_media_queue.xml
+++ b/app/src/main/res/layout/item_media_queue.xml
@@ -4,33 +4,27 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
-    android:id="@+id/layoutItem_mediaQueue"
-    >
+    android:id="@+id/layoutItem_mediaQueue">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_thumbnailMediaQueue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         app:cardCornerRadius="12dp"
         app:cardElevation="2dp"
         android:layout_marginStart="10dp"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent">
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
 
             <ImageView
                 android:id="@+id/img_thumbnailMediaQueue"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:contentDescription="@string/image_for_thumbnail"
-
                 android:src="@drawable/ic_launcher_background"
                 android:scaleType="centerCrop"
                 />
@@ -38,15 +32,12 @@
                 android:id="@+id/tv_durationMediaQueue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:background="@color/black"
-                android:text="1:24"
+                android:text="@string/default_playback_time"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:padding="2dp"
-
-                android:layout_gravity="right|bottom"
-                />
+                android:layout_gravity="end|bottom" />
         </FrameLayout>
 
     </androidx.cardview.widget.CardView>
@@ -56,17 +47,12 @@
         android:id="@+id/tv_nameMediaQueue"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="20dp"
         android:text="@string/app_name"
-
-        android:textColor="@color/colorPlaylist_textColor"
         android:textSize="16sp"
         android:textStyle="bold"
-
         android:ellipsize="end"
         android:singleLine="true"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cardView_thumbnailMediaQueue"
         app:layout_constraintTop_toTopOf="parent" />
@@ -77,15 +63,12 @@
         android:layout_height="40dp"
         android:contentDescription="@string/add_more"
         android:background="?attr/selectableItemBackground"
-
         android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_delete_24dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:tint="@color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
