--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -4,25 +4,21 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
-    android:id="@+id/layoutItem_playlist"
-    >
+    android:id="@+id/layoutItem_playlist">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:elevation="0dp"
         app:cardElevation="0dp"
-
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="12dp"
         android:layout_marginStart="10dp"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent">
+
         <ImageView
             android:id="@+id/img_thumbnail"
             android:layout_width="90dp"
@@ -30,19 +26,16 @@
             android:layout_gravity="center"
             android:contentDescription="@string/image_for_thumbnail"
             android:src="@drawable/ic_launcher_background"
-            android:scaleType="centerCrop"
-            />
+            android:scaleType="centerCrop"/>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_playlistName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="20dp"
         android:text="@string/app_name"
-
-        android:textColor="@color/colorPlaylist_textColor"
         android:textSize="22sp"
         android:textStyle="bold"
 
@@ -56,14 +49,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/app_name"
-
-        android:textColor="@color/colorPlaylist_textColor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cardView_thumbnail"
-
         app:layout_constraintTop_toBottomOf="@id/tv_playlistName" />
-
 
     <ImageButton
         android:id="@+id/imgBtn_more"
@@ -71,11 +60,9 @@
         android:layout_height="40dp"
         android:contentDescription="@string/add_more"
         android:background="?attr/selectableItemBackground"
-
         android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_more_vert_24dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
