--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,15 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="green">#00E125</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_cyan">#7BDAEB</color>
     <color name="cyan">#2DC1DC</color>
     <color name="dark_cyan">#1C7993</color>
     <color name="bright_grey">#66AFAFAF</color>
-    <color name="colorPlaylist_background">#FFFFFF</color>
-    <color name="colorPlaylist_addPlaylist">#7CCEDC</color>
-    <color name="colorPlaylist_textColor">#474646</color>
-    <color name="blue1">#7CCEDC</color>
-    <color name="blue2">#3AB0C5</color>
 </resources>
